styling fix on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@ body {
 }
 
 .championShipLogo {
-  width: 35rem;
+  width: 20rem;
 }
 
 .sfcccLogo,
